--- a/dietproject.html
+++ b/dietproject.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Personalized Indian Diet Planner</title>
+  <title>Personalised Diet Planner</title>
   <style>
     /* General Styling */
     body {
@@ -122,7 +122,7 @@
 </head>
 <body>
   <header>
-    Personalized Diet Planner
+    Personalised Diet Planner
   </header>
 
   <div class="container">
